feat: terminado creacion de entrada, falta editar